...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="MIC Login" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="TXD-eZ-UX1">
                                                    <rect key="frame" x="16" y="0.0" width="343" height="43.5"/>
                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=" " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pim-MP-Veo">
                                <rect key="frame" x="85.5" y="72" width="4.5" height="20.5"/>
                                <accessibility key="accessibilityConfiguration" identifier="User ID Value">
                                    <bool key="isElement" value="YES"/>
                                </accessibility>
...
                                <segments>
                                    <segment title="SafariViewController"/>
                                    <segment title="SFAuthenticationSession"/>
                                    <segment title="WKWebView"/>
                                </segments>
                                <connections>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3Py-hQ-JY0">
                                        <rect key="frame" x="0.0" y="154" width="343" height="30"/>
                                        <accessibility key="accessibilityConfiguration" identifier="Login"/>
                                        <state key="normal" title="Login"/>
                                        <connections>
...
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Username:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uFZ-QP-LSW">
                                <rect key="frame" x="16" y="75" width="83.5" height="20.5"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Password:" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1MU-p9-cMO">
                                <rect key="frame" x="21" y="112.5" width="78.5" height="20.5"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
